# house-pricing-prediction

./: README.md  gb_lr_engineering_analysis.py  housing_price_demo.ipynb  housing_price_prediction.ipynb  pyproject.toml  regularized_linear_models.py
experiments/: data_preprocessing.py  data_preprocessing_with_featurefea.py  evaluation.py  mlp.py  train.py  train_demo.ipynb
gb_lr_engineering_analysis/: baseline_metrics.csv  linear_regularization_metrics.csv
regularized_linear_models/: model_metrics.csv  regularized_linear_models_report.md  ridge_vs_ols_coefficients.csv  vif.csv
results/gb_lr_engineering_analysis/: engineering_analysis_report.md  gradient_boosting_feature_importance.csv  gradient_boosting_regularization_metrics.csv  linear_regularization_coefficients.csv
results/neural_network/: step3_nn_experiments.csv  step5_comparison_table.csv  step6_lasso_importance.csv  step6_worst_predictions.csv
results/neural_network_001/: step1_baseline_metrics.csv  step3_nn_experiments.csv  step6_nn_importance.csv
results/neural_network_002/: step1_baseline_metrics.csv  step3_nn_experiments.csv  step5_comparison_table.csv  step6_lasso_importance.csv  step6_nn_importance.csv  step6_worst_predictions.csv
results/neural_network_003/: step1_baseline_metrics.csv  step3_nn_experiments.csv  step5_comparison_table.csv  step6_lasso_importance.csv  step6_nn_importance.csv
results/regularized_linear_models/: lasso_coefficients.csv
