[project]
name = "house-pricing-prediction"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "torch>=2.12.1",
    "torchviz>=0.0.3",
]
